# minilog

./: CMakeLists.txt  README.md
include/: log_worker.h  minilog.h
src/: log_worker.cpp  test.cpp
